fix overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@
 
 body,
 html {
+	overflow-y: hidden;
 	height: 100%;
 	background-color: var(--background);
 	color: var(--foreground);
